--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <link rel="icon" href="..//RESOURCES/Examples/Icon.png" type="image/x-icon">
+    <link rel="icon" href="..//RESOURCES/Icon.png" type="image/x-icon">
 
     <title>Ternii [main]</title>
 </head>
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <a href="ternii-main.html" class="nav-figma-logo">
-                 <img src="..//RESOURCES/Examples/ternii-web-logo (1).png" alt="Figma logotype" style="height: 40px;">
+                 <img src="..//RESOURCES/ternii-web-logo (1).png" alt="Figma logotype" style="height: 40px;">
             </a>
             <ul class="nav-ul">
 
