--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <a href="ternii-main.html" class="nav-figma-logo">
-                 <img src="..//RESOURCES/ternii-web-logo(1).png" alt="Figma logotype" style="height: 40px;">
+                 <img src="/RESOURCES/ternii-web-logo(1).png" alt="Figma logotype" style="height: 40px;">
             </a>
             <ul class="nav-ul">
 
