--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <button class="content-1-btn-2" >Portfolio</button>
         </section>
         <section class="content-2">
-                <img class="content-2-img-1" src="..//RESOURCES/Examples/ashezenin.png" alt="portfolio photo №1">
-                <img class="content-2-img-2" src="..//RESOURCES/Examples/kirillternii.png" alt="portfolio photo №2">
+                <img class="content-2-img-1" src="./RESOURCES/ashezenin.png" alt="portfolio photo №1">
+                <img class="content-2-img-2" src="./RESOURCES/kirillternii.png" alt="portfolio photo №2">
         </section>
         <section id="content-3" class="content-3">
             <ul class="content-3-ul">
@@ -111,27 +111,27 @@
                     <ul class="footer-link-ul">
                        <li class="footer-link-li">
                           <a class="footer-link-li-a" href="#" >
-                            <img src="..//RESOURCES/Examples/in-icon.png" class="footer-link-li-a-img" alt="YouTube">
+                            <img src="./RESOURCES/in-icon.png" class="footer-link-li-a-img" alt="YouTube">
                          </a>
                        </li>
                        <li class="footer-link-li">
                             <a class="footer-link-li-a" href="#" >
-                                <img src="..//RESOURCES/Examples/tg-icon.png" class="footer-link-li-a-img" alt="Instagram">
+                                <img src="./RESOURCES/tg-icon.png" class="footer-link-li-a-img" alt="Instagram">
                            </a>
                        </li>
                        <li class="footer-link-li">
                             <a class="footer-link-li-a" href="#" >
-                                <img src="..//RESOURCES/Examples/reddit-icon.png" class="footer-link-li-a-img" alt="Telegram">
+                                <img src="./RESOURCES/reddit-icon.png" class="footer-link-li-a-img" alt="Telegram">
                             </a>
                        </li>
                        <li class="footer-link-li">
                              <a class="footer-link-li-a" href="#" >
-                                <img src="..//RESOURCES/Examples/youtube-icon.png" class="footer-link-li-a-img" alt="VKontakte">
+                                <img src="./RESOURCES/youtube-icon.png" class="footer-link-li-a-img" alt="VKontakte">
                              </a>
                        </li>
                        <li class="footer-link-li">
                             <a class="footer-link-li-a" href="#" >
-                               <img src="..//RESOURCES/Examples/insta-icon.png" class="footer-link-li-a-img" alt="GITHUB">
+                               <img src="./RESOURCES/insta-icon.png" class="footer-link-li-a-img" alt="GITHUB">
                             </a>
                        </li>
                     </ul>
