--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
             <button class="content-1-btn-2" >Portfolio</button>
         </section>
         <section class="content-2">
+            <div class="content-2-section">
                 <img class="content-2-img-1" src="./RESOURCES/ashezenin.png" alt="portfolio photo №1">
                 <img class="content-2-img-2" src="./RESOURCES/kirillternii.png" alt="portfolio photo №2">
+            </div>
         </section>
         <section id="content-3" class="content-3">
             <ul class="content-3-ul">
