--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                     </ul>
             </div>
 
+        <div class="footer-link-block-container">
             <div class="footer-link-block-2">
                 <ul class="footer-info-ul-1">
 
@@ -203,6 +204,7 @@
 
                 </ul>
             </div>
+        </div>
     </footer>
 </body>
 </html>
