--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="..//CSS/reset.css">
-    <link rel="stylesheet" href="..//CSS/styles-portfolio.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href=".//styles-portfolio.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <link rel="icon" href="..//RESOURCES/Examples/Icon.png" type="image/x-icon">
+    <link rel="icon" href=".RESOURCES/Icon.png" type="image/x-icon">
 
     <title>Ternii [Portfolio]</title>
 </head>
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <a href="ternii-main.html">
-                 <img src="..//RESOURCES/Examples/ternii-web-logo (1).png" alt="Figma logotype" class="nav-logo">
+                 <img src="./RESOURCES/ternii-web-logo (1).png" alt="Figma logotype" class="nav-logo">
             </a>
             <ul class="nav-ul">
 
