--- a/index.html
+++ b/index.html
@@ -19,32 +19,7 @@
 <body>
 
     <header>
-        <nav>
-            <a href="ternii-main.html" class="nav-figma-logo">
-                 <img src="./RESOURCES/ternii-web-logo (1).png" alt="Ternii Logotype" style="height: 40px;">
-            </a>
-            <ul class="nav-ul">
-
-                <li class="nav-li">
-                    <a href="ternii-portfolio.html" class="nav-li-a">Projects</a>
-                </li>
-                <li class="nav-li">
-                    <a href="ternii-update.html" class="nav-li-a">Upadte</a>
-                </li>
-                <li class="nav-li">
-                    <a href="ternii-core.html" class="nav-li-a">Core</a>
-                </li>
-                <li class="nav-li">
-                    <a href="#footer" class="nav-li-a">Contact</a>
-                </li>
-                <li class="nav-li">
-                    <button class="nav-li-btn-1">RU</button>
-                </li>
-                <li class="nav-li">
-                    <button class="nav-li-btn-2">ENG</button>
-                </li>
-            </ul>
-        </nav>
+       <!--Подгружаю header-->
     </header>
     <main>
         <section class="content-1">
