--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<footer>
+<div class="footer-link-block-1">
+                <p class="footer-p">SOCIAL</p>
+                    <ul class="footer-link-ul">
+                       <li class="footer-link-li">
+                          <a class="footer-link-li-a" href="#" >
+                            <img src="./RESOURCES/in-icon.png" class="footer-link-li-a-img" alt="YouTube">
+                         </a>
+                       </li>
+                       <li class="footer-link-li">
+                            <a class="footer-link-li-a" href="#" >
+                                <img src="./RESOURCES/tg-icon.png" class="footer-link-li-a-img" alt="Instagram">
+                           </a>
+                       </li>
+                       <li class="footer-link-li">
+                            <a class="footer-link-li-a" href="#" >
+                                <img src="./RESOURCES/reddit-icon.png" class="footer-link-li-a-img" alt="Telegram">
+                            </a>
+                       </li>
+                       <li class="footer-link-li">
+                             <a class="footer-link-li-a" href="#" >
+                                <img src="./RESOURCES/youtube-icon.png" class="footer-link-li-a-img" alt="VKontakte">
+                             </a>
+                       </li>
+                       <li class="footer-link-li">
+                            <a class="footer-link-li-a" href="#" >
+                               <img src="./RESOURCES/insta-icon.png" class="footer-link-li-a-img" alt="GITHUB">
+                            </a>
+                       </li>
+                    </ul>
+                    <p class="footer-p">CONTACS (click)</p>
+                    <ul class="footer-contacts-ul">
+                        <li class="footer-contacts-li">
+                            <a class="footer-contacts-li-a" href="tel:+79047593861">+7(904)759-38-61</a> - Kirill
+                        </li>
+                        <li class="footer-contacts-li">
+                            <a class="footer-contacts-li-a" href="tel:+79047593861">+7(904)759-38-61</a> - Ashe
+                        </li>
+                        <li class="footer-contacts-li">
+                            <a class="footer-contacts-li-a" href="mailto:kirillternii@gmail.com">kirillternii@gmail.com</a>
+                        </li>
+                        <li class="footer-contacts-li">
+                            <a class="footer-contacts-li-a" href="mailto:4ashe@gmail.com">4ashe@gmail.com</a></li>
+                    </ul>
+            </div>
 
+        <div class="footer-link-block-container">
+            <div class="footer-link-block-2">
+                <ul class="footer-info-ul-1">
+
+                    <li class="footer-info-li">
+                        <p class="footer-info-li-h1">CREATORS ZONE</p>
+                    </li>
+
+                    <li class="footer-info-li">
+                        <a href="" class="footer-info-li-a">Test page</a>
+                    </li>
+
+                    <li class="footer-info-li">
+                        <a href="" class="footer-info-li-a">Designs stage</a>
+                    </li>
+
+                    <li class="footer-info-li">
+                        <a href="" class="footer-info-li-a">Image board</a>
+                    </li>
+
+                    <li class="footer-info-li">
+                        <a href="" class="footer-info-li-a">Video resources</a>
+                    </li>
+
+                </ul>
+            </div>
+            <div class="footer-link-block-3">
+                <ul class="footer-info-ul-1">
+
+                    <li class="footer-info-li">
+                        <p class="footer-info-li-h1">WEB ZONE</p>
+                    </li>
+
+                    <li class="footer-info-li">
+                        <a href="" class="footer-info-li-a">GitHub page</a>
+                    </li>
+
+                    <li class="footer-info-li">
+                        <a href="" class="footer-info-li-a">Testing area</a>
+                    </li>
+
+                    <li class="footer-info-li">
+                        <a href="" class="footer-info-li-a">Manuals links</a>
+                    </li>
+
+                    <li class="footer-info-li">
+                        <a href="" class="footer-info-li-a">About Mind</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+  </footer>
+</html>
