--- a/header.html
+++ b/header.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<header>
  <nav>
             <a href="ternii-main.html" class="nav-figma-logo">
                  <img src="./RESOURCES/ternii-web-logo (1).png" alt="Ternii Logotype" style="height: 40px;">
@@ -27,4 +26,4 @@
             </ul>
         </nav>
 </header>
-</header>
+</html>
