--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <nav>
  
-  <a href="ternii-main.html" class="nav-figma-logo">
+  <a href="index.html" class="nav-figma-logo">
    <img src="./RESOURCES/ternii-web-logo (1).png" alt="Ternii Logotype" style="height: 40px;">
   </a>
   
