--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -33,42 +33,42 @@
                 <ul>
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
-                            <img src="..//RESOURCES/Examples/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
+                            <img src="../RESOURCES/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
                             <p class="content-2-li-portfolio-p">My fitst site!</p>
                             <p class="content-2-li-portfolio-p-status-active">ACTIVE</p>
                         </a>
                     </li>
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
-                            <img src="..//RESOURCES/Examples/ternii-site-preview-2.png" alt="" class="content-2-portfolio-li-image">
+                            <img src="./RESOURCES/ternii-site-preview-2.png" alt="" class="content-2-portfolio-li-image">
                             <p class="content-2-li-portfolio-p">My fitst site coopy</p>
                             <p class="content-2-li-portfolio-p-status-done">DONE</p>
                         </a>
                     </li>
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
-                            <img src="..//RESOURCES/Examples/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
+                            <img src="./RESOURCES/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
                             <p class="content-2-li-portfolio-p">My fitst site!</p>
                             <p class="content-2-li-portfolio-p-status-active">ACTIVE</p>
                         </a>
                     </li>
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
-                            <img src="..//RESOURCES/Examples/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
+                            <img src="./RESOURCES/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
                              <p class="content-2-li-portfolio-p">My fitst site!</p>
                              <p class="content-2-li-portfolio-p-status-done">DONE</p>
                         </a>
                     </li>
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
-                             <img src="..//RESOURCES/Examples/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
+                             <img src="./RESOURCES/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
                              <p class="content-2-li-portfolio-p">My fitst site!</p>
                              <p class="content-2-li-portfolio-p-status-done">DONE</p>
                         </a>
                     </li>
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
-                          <img src="..//RESOURCES/Examples/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
+                          <img src="./RESOURCES/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
                           <p class="content-2-li-portfolio-p">My fitst site!</p>
                           <p class="content-2-li-portfolio-p-status-active">ACTIVE</p>
                         </a>
@@ -79,7 +79,7 @@
         </section>
 
         <section id="content-3" class="content-3">
-            <img src="..//RESOURCES/Examples/content-3-check-image.png" alt="" class="content-3-image-check">
+            <img src="./RESOURCES/content-3-check-image.png" alt="" class="content-3-image-check">
             <h3>Update history [All]</h3>
 
             <ul class="content-3-upadate-list-helper-ul">
