--- a/header.html
+++ b/header.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+ <link rel="stylesheet" href="../CSS/styles-header.css">
+</head>
 <nav>
  
   <a href="index.html" class="nav-figma-logo">
