--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
- <link rel="stylesheet" href="../CSS/styles-header.css">
+ <link rel="stylesheet" href="./CSS/styles-header.css">
 </head>
 <nav>
  
