--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="./CSS/styles-footer.css"">
+</head>
 <div class="footer-link-block-1">
                 <p class="footer-p">SOCIAL</p>
                     <ul class="footer-link-ul">
