--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="./CSS/styles-footer.css"">
+  <link rel="stylesheet" href="./CSS/styles-footer.css">
 </head>
 <div class="footer-link-block-1">
                 <p class="footer-p">SOCIAL</p>
