--- a/ternii-update.html
+++ b/ternii-update.html
@@ -93,7 +93,7 @@
         </section>
 
         <section id="content-3" class="content-3">
-            <img src="..//RESOURCES/Examples/content-3-check-image.png" alt="" class="content-3-image-check">
+            <img src="./RESOURCES/content-3-check-image.png" alt="" class="content-3-image-check">
             <h3>Update history [Ternii WEB]</h3>
 
             <ul class="content-3-upadate-list-helper-ul">
