--- a/ternii-update.html
+++ b/ternii-update.html
@@ -69,9 +69,11 @@
              <p class="content-2-active-p">
                 My debut website, which I developed entirely on my own, from design to layout. It will serve as my portfolio and I will constantly update it. The site will always be under the hashtag "active". In one word - Hello, world!
              </p>
-             
-             <p class="content-2-active-bar-load-start">start >></p>
-             <p class="content-2-active-bar-load-end">end</p>
+
+            <div class="content-2-active-bar-container">
+                 <p class="content-2-active-bar-load-start">start >></p>
+                 <p class="content-2-active-bar-load-end">end</p>
+            </div>    
              <div class="content-2-active-load-bar-bg">
                 <div class="content-2-active-load-bar"></div>
              </div>
