--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -29,7 +29,7 @@
         </section>
 
         <section class="content-2">
-
+                <div class="content-2-container">
                 <ul>
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
@@ -75,6 +75,7 @@
                     </li>
                     
                 </ul>
+                </div>
             
         </section>
 
