--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -29,8 +29,8 @@
         </section>
 
         <section class="content-2">
-                <div class="content-2-container">
-                <ul>
+                <div class="content-2-portfolio-container">
+                <ul class="content-2-protfolio-ul">
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
                             <img src="../RESOURCES/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
