--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -33,7 +33,7 @@
                 <ul class="content-2-protfolio-ul">
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
-                            <img src="../RESOURCES/ternii-site-preview.jpg" alt="" class="content-2-portfolio-li-image">
+                            <img src="./RESOURCES/ternii-site-preview-2.png" alt="" class="content-2-portfolio-li-image">
                             <p class="content-2-li-portfolio-p">My fitst site!</p>
                             <p class="content-2-li-portfolio-p-status-active">ACTIVE</p>
                         </a>
