--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -79,9 +79,9 @@
             
         </section>
 
-        <section id="content-3" class="content-3">
+     <section id="content-3" class="content-3">
             <img src="./RESOURCES/content-3-check-image.png" alt="" class="content-3-image-check">
-            <h3>Update history [All]</h3>
+            <h3>Update history [Ternii WEB]</h3>
 
             <ul class="content-3-upadate-list-helper-ul">
                 <li class="content-3-upadte-helper-li-1">Info</li>
