--- a/ternii-update.html
+++ b/ternii-update.html
@@ -32,7 +32,7 @@
             
             <ul class="content-2-bar-ul">
                 <li class="content-2-bar-li-1">
-                    <h2 class="content-2-h2">Projects</h2>
+                    <h2 class="content-2-h2">PROJECTS</h2>
                 </li>
                 <li class="content-2-bar-li-2">#Active</li>
                 <li class="content-2-bar-li-2">#Solo</li>
