--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -30,6 +30,7 @@
 
         <section class="content-2">
                 <div class="content-2-portfolio-container">
+                <div class="content-2-portfolio-filter"></div>
                 <ul class="content-2-protfolio-ul">
                     <li class="content-2-portfolio-li">
                         <a class="content-2-portfolio-li-href" href="">
