--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -29,7 +29,14 @@
         </section>
 
         <section class="content-2">
-                <div class="content-2-portfolio-filter"></div>
+                <div class="content-2-portfolio-filter">
+                    <ul class="content-2-portfolio-filter-ul">
+                        <li class="content-2-portfolio-filter-li">test</li>
+                        <li class="content-2-portfolio-filter-li">test</li>
+                        <li class="content-2-portfolio-filter-li">test</li>
+                        <li class="content-2-portfolio-filter-li">test</li>
+                    </ul>
+                </div>
                 <div class="content-2-portfolio-container">
                 
                 <ul class="content-2-protfolio-ul">
