--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -31,10 +31,10 @@
         <section class="content-2">
                 <div class="content-2-portfolio-filter">
                     <ul class="content-2-portfolio-filter-ul">
-                        <li class="content-2-portfolio-filter-li">test</li>
-                        <li class="content-2-portfolio-filter-li">test</li>
-                        <li class="content-2-portfolio-filter-li">test</li>
-                        <li class="content-2-portfolio-filter-li">test</li>
+                        <li class="content-2-portfolio-filter-li-search">Search</li>
+                        <li class="content-2-portfolio-filter-li-active">Active</li>
+                        <li class="content-2-portfolio-filter-li-done">Done</li>
+                        <li class="content-2-portfolio-filter-li-dev">Development</li>
                     </ul>
                 </div>
                 <div class="content-2-portfolio-container">
