--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -31,10 +31,11 @@
         <section class="content-2">
                 <div class="content-2-portfolio-filter">
                     <ul class="content-2-portfolio-filter-ul">
-                        <li class="content-2-portfolio-filter-li-search">Search</li>
-                        <li class="content-2-portfolio-filter-li-active">Active</li>
-                        <li class="content-2-portfolio-filter-li-done">Done</li>
-                        <li class="content-2-portfolio-filter-li-dev">Development</li>
+                        <li class="content-2-portfolio-filter-li">
+                            <input type="text" id="portfolio-filter-search" name="portfolio-filter-search"  required minlength="4" maxlength="8" size="10"> 
+                        <li class="content-2-portfolio-filter-li">Active</li>
+                        <li class="content-2-portfolio-filter-li">Done</li>
+                        <li class="content-2-portfolio-filter-li">Development</li>
                     </ul>
                 </div>
                 <div class="content-2-portfolio-container">
