--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -33,9 +33,20 @@
                     <ul class="content-2-portfolio-filter-ul">
                         <li class="content-2-portfolio-filter-li">
                             <input type="text" id="portfolio-filter-search" name="portfolio-filter-search"  required minlength="4" maxlength="8" size="10"> 
-                        <li class="content-2-portfolio-filter-li">Active</li>
-                        <li class="content-2-portfolio-filter-li">Done</li>
-                        <li class="content-2-portfolio-filter-li">Development</li>
+                        </li>
+                        <li class="content-2-portfolio-filter-li">
+                            <button class="content-2-portfolio-filter-li-btn-search">SEARCH</button>
+                        </li>
+                        <li class="content-2-portfolio-filter-li">
+                            <button class="content-2-portfolio-filter-li-btn-active">Active</button>
+                        </li>
+                        <li class="content-2-portfolio-filter-li">
+                            <button class="content-2-portfolio-filter-li-btn-active">Done</button>
+                        </li>
+                        <li class="content-2-portfolio-filter-li">
+                            <button class="content-2-portfolio-filter-li-btn-dev">Development</button>
+                        </li>
+                        
                     </ul>
                 </div>
                 <div class="content-2-portfolio-container">
