--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -32,7 +32,7 @@
                 <div class="content-2-portfolio-filter">
                     <ul class="content-2-portfolio-filter-ul">
                         <li class="content-2-portfolio-filter-li">
-                            <input type="text" id="portfolio-filter-search" name="portfolio-filter-search"  required minlength="4" maxlength="15" size="10" class="portfolio-filter-search"> 
+                            <input type="text" id="portfolio-filter-search" name="portfolio-filter-search"  required minlength="4" maxlength="15" size="10" class="content-2-portfolio-filter-search"> 
                         </li>
                         <li class="content-2-portfolio-filter-li">
                             <button class="content-2-portfolio-filter-li-btn-search">SEARCH</button>
