--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -35,16 +35,16 @@
                             <input type="text" id="portfolio-filter-search" name="portfolio-filter-search"  required minlength="4" maxlength="15" size="10" class="content-2-portfolio-filter-search"> 
                         </li>
                         <li class="content-2-portfolio-filter-li">
-                            <button class="content-2-portfolio-filter-li-btn-search">SEARCH</button>
+                            <button class="content-2-portfolio-filter-li-btn-search">//SEARCH</button>
                         </li>
                         <li class="content-2-portfolio-filter-li">
-                            <button class="content-2-portfolio-filter-li-btn-active">Active</button>
+                            <button class="content-2-portfolio-filter-li-btn-active">#Active</button>
                         </li>
                         <li class="content-2-portfolio-filter-li">
-                            <button class="content-2-portfolio-filter-li-btn-active">Done</button>
+                            <button class="content-2-portfolio-filter-li-btn-done">#Done</button>
                         </li>
                         <li class="content-2-portfolio-filter-li">
-                            <button class="content-2-portfolio-filter-li-btn-dev">Development</button>
+                            <button class="content-2-portfolio-filter-li-btn-dev">#Development</button>
                         </li>
                         
                     </ul>
