--- a/footer.html
+++ b/footer.html
@@ -81,7 +81,7 @@
                     </li>
 
                     <li class="footer-info-li">
-                        <a href="" class="footer-info-li-a">GitHub page</a>
+                        <a href="https://github.com/Ternii?tab=repositories" class="footer-info-li-a">GitHub page</a>
                     </li>
 
                     <li class="footer-info-li">
