--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
    </li>
    
    <li class="nav-li">
-     <a href="ternii-core.html" class="nav-li-a">Task</a>
+     <a href="ternii-task.html" class="nav-li-a">Task</a>
    </li>
    
    <li class="nav-li">
