--- a/ternii-task.html
+++ b/ternii-task.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./CSS/reset.css">
-    <link rel="stylesheet" href="./CSS/styles-update.css">
+    <link rel="stylesheet" href="./CSS/styles-task.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,6 +25,11 @@
             <p class="content-1-p">BACKLOG</p>
         </section>
         <section class="content-2">
+            <ul class="content-2-ul">
+                <li class="content-2-li">
+                    <button type="button" class="content-2-li-btn">Ternii Web</button>
+                </li>
+            </div>
 
         </section>
 
