--- a/ternii-task.html
+++ b/ternii-task.html
@@ -28,7 +28,43 @@
             <ul class="content-2-ul">
                 <li class="content-2-li">
                     <button type="button" class="content-2-li-btn">Ternii Web</button>
+                    <div class="content-2-li-status"></div>
                 </li>
+            </ul>
+            <div class="content-2-container">
+                <div class="content-2-task-desk">
+                    <ul class="content-2-task-desk-ul">
+                        <li class="content-2-task-desk-li">
+                         <button class="content-2-task-desk-li-btn">
+                            <p class="content-2-task-desk-li-task-name">//Front-end</p>
+                            <p class="content-2-task-desk-li-task-status">processed</p>
+                            <p class="content-2-task-desk-li-task-preview">//Start server on GitHube.</p>
+                         </button>
+                        </li>
+                        <li class="content-2-task-desk-li">
+                            <button class="content-2-task-desk-li-btn">
+                               <p class="content-2-task-desk-li-task-name">//Front-end</p>
+                               <p class="content-2-task-desk-li-task-status">processed</p>
+                               <p class="content-2-task-desk-li-task-preview">//Start server on GitHube.</p>
+                            </button>
+                           </li>
+                           <li class="content-2-task-desk-li">
+                            <button class="content-2-task-desk-li-btn">
+                               <p class="content-2-task-desk-li-task-name">//Front-end</p>
+                               <p class="content-2-task-desk-li-task-status">processed</p>
+                               <p class="content-2-task-desk-li-task-preview">//Start server on GitHube.</p>
+                            </button>
+                           </li>
+                           <li class="content-2-task-desk-li">
+                            <button class="content-2-task-desk-li-btn">
+                               <p class="content-2-task-desk-li-task-name">//Front-end</p>
+                               <p class="content-2-task-desk-li-task-status">processed</p>
+                               <p class="content-2-task-desk-li-task-preview">//Start server on GitHube.</p>
+                            </button>
+                           </li>
+                    </ul>
+                </div>
+                <div class="content-2-work-desk"></div>
             </div>
 
         </section>
