--- a/ternii-task.html
+++ b/ternii-task.html
@@ -36,35 +36,28 @@
                     <ul class="content-2-task-desk-ul">
                         <li class="content-2-task-desk-li">
                          <button class="content-2-task-desk-li-btn">
-                            <p class="content-2-task-desk-li-task-name">//Front-end</p>
+                            <p class="content-2-task-desk-li-task-name">//Ternii-Web</p>
                             <p class="content-2-task-desk-li-task-status">processed</p>
-                            <p class="content-2-task-desk-li-task-preview">//Start server on GitHube.</p>
+                            <p class="content-2-task-desk-li-task-preview">//Update Front-end.</p>
                          </button>
                         </li>
                         <li class="content-2-task-desk-li">
                             <button class="content-2-task-desk-li-btn">
-                               <p class="content-2-task-desk-li-task-name">//Front-end</p>
-                               <p class="content-2-task-desk-li-task-status">processed</p>
-                               <p class="content-2-task-desk-li-task-preview">//Start server on GitHube.</p>
-                            </button>
-                           </li>
-                           <li class="content-2-task-desk-li">
-                            <button class="content-2-task-desk-li-btn">
-                               <p class="content-2-task-desk-li-task-name">//Front-end</p>
-                               <p class="content-2-task-desk-li-task-status">processed</p>
-                               <p class="content-2-task-desk-li-task-preview">//Start server on GitHube.</p>
-                            </button>
-                           </li>
-                           <li class="content-2-task-desk-li">
-                            <button class="content-2-task-desk-li-btn">
-                               <p class="content-2-task-desk-li-task-name">//Front-end</p>
-                               <p class="content-2-task-desk-li-task-status">processed</p>
-                               <p class="content-2-task-desk-li-task-preview">//Start server on GitHube.</p>
+                               <p class="content-2-task-desk-li-task-name">//Load on GitHube</p>
+                               <p class="content-2-task-desk-li-task-status">done</p>
+                               <p class="content-2-task-desk-li-task-preview">//Load repository on GitHube.</p>
                             </button>
                            </li>
                     </ul>
                 </div>
-                <div class="content-2-work-desk"></div>
+                <div class="content-2-work-desk">
+                    <p class="contnet-2-work-desk-article">TASK NAME</p>
+                    <img src="./RESOURCES/ternii-site-preview-2.png" alt="image from task" class="contnet-2-work-desk-image">
+                    <p class="content-2-work-desk-task">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, repudiandae. Libero, ipsum. Aperiam quae enim assumenda sed modi, fuga fugit atque, reiciendis ipsam quo optio neque repellendus distinctio amet officia!</p>
+                    <p class="content-2-work-desk-task-author">Author [Ternii Kirill]</p>
+                    <p class="content-2-work-desk-task-perfomer">Perfomer [Ternii Kirill]</p>
+
+                </div>
             </div>
 
         </section>
