--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h3 id="ig-content-3-h3-1">REPORT!</h3>
                     <p class="content-3-li-data">07.07.2024</p>
                     <p class="content-3-li-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, velit iste, eum doloribus ullam placeat beatae magnam, cum molestiae sequi deserunt quidem reprehenderit nobis accusamus quibusdam illum temporibus blanditiis recusandae!</p>
-                    <button class="content-3-li-btn"><a class="content-3-li-btn-a" href="ternii-update.html">More</a></button>
+                    <button class="content-3-li-btn">More</button>
                 </li>
 
                 <li class="content-3-li">
