--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <ul class="content-3-ul">
 
                 <li class="content-3-li">
-                    <h3 id="ig-content-3-h3-1">REPORT!</h3>
-                    <p class="content-3-li-data">07.07.2024</p>
-                    <p class="content-3-li-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, velit iste, eum doloribus ullam placeat beatae magnam, cum molestiae sequi deserunt quidem reprehenderit nobis accusamus quibusdam illum temporibus blanditiis recusandae!</p>
+                    <h3 id="ig-content-3-h3-1">HEADER UPD</h3>
+                    <p class="content-3-li-data">24.08.2024</p>
+                    <p class="content-3-li-p">Today I slightly updated the styles in the header (now when you hover over links, the text changes color). Also added new updates including this.</p>
                     <button class="content-3-li-btn">More</button>
                 </li>
 
