--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
                     <h3 id="ig-content-3-h3-2">BAG FIXED</h3>
                     <p class="content-3-li-data">05.07.2024</p>
                     <p class="content-3-li-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, velit iste, eum doloribus ullam placeat beatae magnam, cum molestiae sequi deserunt quidem reprehenderit nobis accusamus quibusdam illum temporibus blanditiis recusandae!</p>
-                    <button class="content-3-li-btn"><a class="content-3-li-btn-a" href="ternii-update.html">More</a></button>
+                    <button class="content-3-li-btn">More</button>
                 </li>
 
                 <li class="content-3-li">
                     <h3 id="ig-content-3-h3-3">SUMMER APDATE</h3>
                     <p class="content-3-li-data">01.06.2024</p>
                     <p class="content-3-li-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, velit iste, eum doloribus ullam placeat beatae magnam, cum molestiae sequi deserunt quidem reprehenderit nobis accusamus quibusdam illum temporibus blanditiis recusandae!</p>
-                    <button class="content-3-li-btn"><a class="content-3-li-btn-a" href="ternii-update.html">More</a></button>
+                    <button class="content-3-li-btn">More</button>
                 </li>
 
                 <li class="content-3-li">
                     <h3 id="ig-content-3-h3-4">ON GITHUB</h3>
                     <p class="content-3-li-data">19.06.2024</p>
                     <p class="content-3-li-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, velit iste, eum doloribus ullam placeat beatae magnam, cum molestiae sequi deserunt quidem reprehenderit nobis accusamus quibusdam illum temporibus blanditiis recusandae!</p>
-                    <button class="content-3-li-btn"><a class="content-3-li-btn-a" href="ternii-update.html">More</a></button>
+                    <button class="content-3-li-btn">More</button>
                 </li>
 
                 <li class="content-3-li">
                     <h3 id="ig-content-3-h3-5">CO-WORKING</h3>
                     <p class="content-3-li-data">07.05.2024</p>
                     <p class="content-3-li-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, velit iste, eum doloribus ullam placeat beatae magnam, cum molestiae sequi deserunt quidem reprehenderit nobis accusamus quibusdam illum temporibus blanditiis recusandae!</p>
-                    <button class="content-3-li-btn"><a class="content-3-li-btn-a" href="ternii-update.html">More</a></button>
+                    <button class="content-3-li-btn">More</button>
                 </li>
 
                 <li class="content-3-li">
                     <h3 id="ig-content-3-h3-6">START!</h3>
                     <p class="content-3-li-data">20.04.2024</p>
                     <p class="content-3-li-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, velit iste, eum doloribus ullam placeat beatae magnam, cum molestiae sequi deserunt quidem reprehenderit nobis accusamus quibusdam illum temporibus blanditiis recusandae!</p>
-                    <button class="content-3-li-btn"><a class="content-3-li-btn-a" href="ternii-update.html">More</a></button>
+                    <button class="content-3-li-btn">More</button>
                 </li>
 
             </ul>
