--- a/ternii-task.html
+++ b/ternii-task.html
@@ -38,6 +38,20 @@
                          <button class="content-2-task-desk-li-btn">
                             <p class="content-2-task-desk-li-task-name">//Ternii-Web</p>
                             <p class="content-2-task-desk-li-task-status">processed</p>
+                            <p class="content-2-task-desk-li-task-preview">//Add Java Script.</p>
+                         </button>
+                        </li>
+                        <li class="content-2-task-desk-li">
+                         <button class="content-2-task-desk-li-btn">
+                            <p class="content-2-task-desk-li-task-name">//Ternii-Web</p>
+                            <p class="content-2-task-desk-li-task-status">processed</p>
+                            <p class="content-2-task-desk-li-task-preview">//Create new JS window from tasks</p>
+                         </button>
+                        </li>
+                        <li class="content-2-task-desk-li">
+                         <button class="content-2-task-desk-li-btn">
+                            <p class="content-2-task-desk-li-task-name">//Ternii-Web</p>
+                            <p class="content-2-task-desk-li-task-status">processed</p>
                             <p class="content-2-task-desk-li-task-preview">//Update Front-end.</p>
                          </button>
                         </li>
@@ -47,7 +61,7 @@
                                <p class="content-2-task-desk-li-task-status">done</p>
                                <p class="content-2-task-desk-li-task-preview">//Load repository on GitHube.</p>
                             </button>
-                           </li>
+                        </li>
                     </ul>
                 </div>
                 <div class="content-2-work-desk">
