--- a/ternii-task.html
+++ b/ternii-task.html
@@ -37,28 +37,28 @@
                         <li class="content-2-task-desk-li">
                          <button class="content-2-task-desk-li-btn">
                             <p class="content-2-task-desk-li-task-name">//Ternii-Web</p>
-                            <p class="content-2-task-desk-li-task-status">processed</p>
+                            <p class="content-2-task-desk-li-task-status-waiting">waiting</p>
                             <p class="content-2-task-desk-li-task-preview">//Add Java Script.</p>
                          </button>
                         </li>
                         <li class="content-2-task-desk-li">
                          <button class="content-2-task-desk-li-btn">
                             <p class="content-2-task-desk-li-task-name">//Ternii-Web</p>
-                            <p class="content-2-task-desk-li-task-status">processed</p>
+                            <p class="content-2-task-desk-li-task-status-waiting">waiting</p>
                             <p class="content-2-task-desk-li-task-preview">//Create new JS window from tasks</p>
                          </button>
                         </li>
                         <li class="content-2-task-desk-li">
                          <button class="content-2-task-desk-li-btn">
                             <p class="content-2-task-desk-li-task-name">//Ternii-Web</p>
-                            <p class="content-2-task-desk-li-task-status">processed</p>
+                            <p class="content-2-task-desk-li-task-status-processed">processed</p>
                             <p class="content-2-task-desk-li-task-preview">//Update Front-end.</p>
                          </button>
                         </li>
                         <li class="content-2-task-desk-li">
                             <button class="content-2-task-desk-li-btn">
                                <p class="content-2-task-desk-li-task-name">//Load on GitHube</p>
-                               <p class="content-2-task-desk-li-task-status">done</p>
+                               <p class="content-2-task-desk-li-task-status-done">done</p>
                                <p class="content-2-task-desk-li-task-preview">//Load repository on GitHube.</p>
                             </button>
                         </li>
