--- a/ternii-task.html
+++ b/ternii-task.html
@@ -13,7 +13,7 @@
 
     <link rel="icon" href="./RESOURCES/Icon.png" type="image/x-icon">
 
-    <title>Ternii [Update]</title>
+    <title>Ternii [Task]</title>
 </head>
 <body>
     <header>
