--- a/ternii-update.html
+++ b/ternii-update.html
@@ -47,7 +47,7 @@
                 <li class="content-2-active-project-info-li-1">Name [Ternii WEB]</li>
                 <li class="content-2-active-project-info-li-2">Tag's [Free Project]</li>
                 <li class="content-2-active-project-info-li-3">Authors [Kirill Ternii]</li>
-                <li class="content-2-active-project-info-li-3">Link [<a href="ternii-main.html" class="content-2-active-project-info-li-a">www.ternii.ru</a>]
+                <li class="content-2-active-project-info-li-3">Link [<a href="https://github.com/Ternii/Ternii-Portfolio.git" class="content-2-active-project-info-li-a">Ternii-Portfolio.git</a>]
                 </li>
              </ul>
 
