--- a/ternii-task.html
+++ b/ternii-task.html
@@ -137,7 +137,7 @@
             paragraph_taskName.textContent = tasknameToInsert_1;
             paragraph_taskInfo.textContent = taskInfoToInsert_1;
 
-            document.getElementById('task-image').src="../RESOURCES/main-content-1-bg.png";
+            document.getElementById('task-image').src="./RESOURCES/main-content-1-bg.png";
 
         });
 
@@ -149,7 +149,7 @@
             paragraph_taskName.textContent = tasknameToInsert_2;
             paragraph_taskInfo.textContent = taskInfoToInsert_2;
 
-            document.getElementById('task-image').src="../RESOURCES/update-content-1-bg.png";
+            document.getElementById('task-image').src="./RESOURCES/update-content-1-bg.png";
 
         });
 
@@ -161,7 +161,7 @@
             paragraph_taskName.textContent = tasknameToInsert_3;
             paragraph_taskInfo.textContent = taskInfoToInsert_3;
 
-            document.getElementById('task-image').src="../RESOURCES/task-content-1-bg.png";
+            document.getElementById('task-image').src="./RESOURCES/task-content-1-bg.png";
 
          });
 
@@ -173,7 +173,7 @@
             paragraph_taskName.textContent = tasknameToInsert_4;
             paragraph_taskInfo.textContent = taskInfoToInsert_4;
 
-             document.getElementById('task-image').src="../RESOURCES/project-content-1-bg.png";
+             document.getElementById('task-image').src="./RESOURCES/project-content-1-bg.png";
 
         });
 
