--- a/ternii-task.html
+++ b/ternii-task.html
@@ -137,7 +137,7 @@
             paragraph_taskName.textContent = tasknameToInsert_1;
             paragraph_taskInfo.textContent = taskInfoToInsert_1;
 
-            document.getElementById('task-image').src="./RESOURCES/main-content-1-bg.png";
+            document.getElementById('task-image').src="../resources/portfolio-content-1-bg.png";
 
         });
 
