--- a/ternii-portfolio.html
+++ b/ternii-portfolio.html
@@ -70,7 +70,7 @@
                 
                 <ul class="content-2-protfolio-ul">
                     <li class="content-2-portfolio-li">
-                        <a class="content-2-portfolio-li-href" href="">
+                        <a class="content-2-portfolio-li-href" href="https://ternii.github.io/Ternii-Portfolio/ternii-update.html">
                             <img src="./RESOURCES/ternii-site-preview-2.png" alt="" class="content-2-portfolio-li-image">
                             <p class="content-2-li-portfolio-p">Ternii-Web</p>
                             <p class="content-2-li-portfolio-p-progress">Progress↓</p>
